--- a/Symfony/contactos/.env
+++ b/Symfony/contactos/.env
@@ -29,7 +29,8 @@ APP_SECRET=956f8ddf74b6eadcc5b4f4ede18513a9
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL=mysql://root:sa@127.0.0.1:3306/contactos
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
